# iswyoutube

./: .firebaserc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  firebase.json  firestore.rules  pyproject.toml  requirements-minimal.txt  requirements.txt  run.bat  run.py  run.sh  setup.bat  setup.py
.firebase/: hosting.cHVibGlj.cache
assets/fonts/: .gitkeep
assets/images/: .gitkeep
assets/intros/: .gitkeep
assets/music/: .gitkeep
assets/outros/: .gitkeep
assets/sfx/: .gitkeep
assets/templates/: .gitkeep
config/: api_keys.env.example  settings.yaml
data/: .gitkeep  sample_topics.json
docs/: api_reference.md  configuration.md  getting_started.md
functions/: index.js  package-lock.json  package.json
public/: index.html
scripts/: batch_generate.py  cleanup.py  export_analytics.py  generate_sample.py  setup.py  validate_config.py
src/: __init__.py  main.py
src/analytics/: __init__.py  ab_test_manager.py  dashboard_generator.py  youtube_analytics.py
src/audio/: __init__.py  audio_enhancer.py  audio_mixer.py  bgm_selector.py  sfx_manager.py  tts_engine.py  voice_cloner.py
src/backup/: __init__.py  backup_manager.py
src/community/: __init__.py  comment_analyzer.py  comment_responder.py  spam_filter.py
src/localization/: __init__.py  cultural_adapter.py  dubbing_engine.py  lip_sync.py  translator.py
src/monetization/: __init__.py  ad_placement_optimizer.py  affiliate_manager.py  mid_roll_detector.py
src/quality/: __init__.py  copyright_checker.py  fact_verifier.py  quality_scorer.py
src/repurpose/: __init__.py  blog_converter.py  content_repurposer.py  social_snippet_maker.py
src/research/: __init__.py  audience_analyzer.py  competitor_analyzer.py  fact_checker.py  keyword_researcher.py  source_collector.py  topic_generator.py  trend_analyzer.py  trend_predictor.py
src/script/: __init__.py  cta_generator.py  hook_creator.py  humor_injector.py  script_generator.py  script_optimizer.py  speech_patterns.py  structure_builder.py
src/script/patterns/: __init__.py  emotions.py  emotions2.py  emotions3.py  (+24 more)
src/series/: __init__.py  continuity_checker.py  episode_generator.py  series_planner.py
src/shorts/: __init__.py  highlight_extractor.py  shorts_converter.py
src/thumbnail/: __init__.py  ctr_predictor.py  thumbnail_ab_tester.py  thumbnail_generator.py
src/upload/: __init__.py  scheduler.py  seo_optimizer.py  youtube_uploader.py
src/utils/: firebase_client.py
src/video/: __init__.py  intro_outro_manager.py  subtitle_generator.py  transition_handler.py  video_composer.py  video_exporter.py
src/visual/: __init__.py  animation_engine.py  asset_manager.py  chart_generator.py  image_generator.py  infographic_maker.py  map_generator.py  scene_planner.py
tests/: __init__.py  conftest.py  test_audio.py  test_backup.py  test_main.py  test_research.py  test_script.py  test_thumbnail.py  test_video.py  test_visual.py
